--- a/settings.json
+++ b/settings.json
@@ -2,8 +2,10 @@
   "form_title": "アルバイト登録",
   "form_button_color": "#00cc66",
   "form_label_name": "ニックネーム",
-  "form_label_area": "希望勤務地",
-  "form_label_available": "働ける曜日・時間",
+  "form_label_alb_experience": "経験（複数選択可）",
+  "form_label_alb_handslevel": "補助レベル（複数選択可）",
+  "form_label_area": "希望エリア",
+  "form_label_available": "稼働可能日・時間",
   "custom_fields_form": [
     {
       "label": "資格・スキル",
@@ -18,6 +20,8 @@
   "form_label_classroom_name": "教室名/イベント名",
   "form_label_classroom_location": "場所",
   "form_label_classroom_date": "募集日時",
-  "form_label_classroom_experience": "希望する経験",
+  "form_label_classroom_experience": "希望する経験（複数選択可）",
+  "form_label_classroom_handslevel": "補助レベル（複数選択可）",
+  "form_label_classroom_notes": "その他ご要望・自由記述",
   "custom_fields_classroom": []
 }
