--- a/.render.yaml
+++ b/.render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: acro-monitor
     env: python
-    buildCommand: pip install -r ping-service/requirements.txt
+    buildCommand: pip install -r ../requirements.txt
     startCommand: python monitor_acro_match.py
-    workingDirectory: src
+    workingDirectory: ping-service/src
     autoDeploy: true
